@startuml Program
skinparam style strictuml
skinparam monochrome true


interface ASTNode {
    getLine(): int
    getColumn(): int
}

class AbstractDefinition {
    line: int
    column: int
}

class RecordField {
    id: String
    type: Type
}


interface Statement
interface Definition

Definition <|.. AbstractDefinition

class VarDef {
    variable: Variable
    type: Type
}

class FunDef {
    body:List<Statement>
    localVars:List<VarDef>
    name: String
    type: FunType
}

class FuncType {
    params:List<VarDef>
    returnType: Type
}


FunDef o-- "0..n" Statement
Type <|.. FuncType

interface Type



class Program {
    funDefs: List<Definitions>
    varDefs: List<VarDef>
    line: int
    column: int
}

ASTNode <|.. Program
Program  o-- "0..n" Definition
ASTNode <|-- Definition

AbstractDefinition <|-- VarDef
AbstractDefinition <|-- FunDef
AbstractDefinition <|-- RecordField

FunDef o-- "0..n" VarDef
VarDef o-- "1" Type
RecordField o-- "1" Type




@enduml
